methods.flowerpot.FlowerPot.scala.error
Erreur de compilation :
FlowerPot:1: error: ';' expected but 'def' found.
ovverinde def growFlowers(){
          ^